--- a/_data/footer.yml
+++ b/_data/footer.yml
@@ -5,7 +5,7 @@
 columns:
   - name: Contact us
     description: | # Can be Markdown
-      [<i class="fa fa-envelope"></i> contact](mailto:contact@biodiversity.be)<br>![BBPf](/assets/images/logos/logoBBPf.png){:height="60px" width="120px"}
+      [<i class="fa fa-envelope"></i> contact](mailto:gbif@biodiversity.be)<br>![BBPf](/assets/images/logos/logoBBPf.png){:height="60px" width="120px"}
 
     connectIcons: true
 
