--- a/_data/fr/examples.yml
+++ b/_data/fr/examples.yml
@@ -22,7 +22,7 @@ stats:
       href: /fr/literature/search
 support:
   reverse: false
-  title: "notre contribution"
+  title: "notre mission"
   description: | # required
     La Belgique contribue au GBIF depuis sa création. Elle a toujours été un participant très actif depuis 2001.
     Gràce à nos efforts continus en mobilisation de données, en publication et en utilisation, nous avons atteint des résultats impressionnants malgré la petite taille de notre pays.
