--- a/_data/nl/examples.yml
+++ b/_data/nl/examples.yml
@@ -22,7 +22,7 @@ stats:
       href: /literature/search
 support:
   reverse: false
-  title: "Onze bijdrage"
+  title: "Onze opdracht"
   description: | # required
     België was een early adopter van GBIF. Sinds 2001 zijn we er actief in als stemgerechtigde deelnemer. Dankzij onze continue inspanningen voor data-mobilisatie, -publicatie en -gebruik hebben we al geweldige resultaten geboekt voor zo’n klein land.
   # img required
