--- a/_data/node.yml
+++ b/_data/node.yml
@@ -54,7 +54,7 @@ staff:
         Dimitri is a biologist interested in biodiversity informatics, he animates the network and is actively involved in data mobilisation and publication in Flanders. Dimitri has a particular interest in data standardisation, Darwin Core, invasive species, palaeontology, terrestrial and freshwater biodiversity. He advocates Open Science in the Research cycle and looks for practical usage of open data. He loves to chat with scientists and helps them to publish their data. His goal is to get Flanders on the global map of biodiversity. Dimitri has is office in the Research Institute for Nature and Forest.<br>[<i class="fa fa-envelope"></i> contact](maito:d.brosens@biodiversity.be)
       categories: [Open Data Expert]
       background: /assets/images/staff/dimi.png
-    - title: Maxime Coppremanne # required
+    - title: Maxime Coupremanne # required
       description: | # required
         Maxime is a biologist involved in the mobilization of biodiversity data on the Global Biodiversity Information Facility (GBIF) portal. Based at the Départment d'Etude du Milieu Naturel et Agricole (SPW-DEMNA), he advocates the use of Open Data in Wallonia and support anyhow is willing to join the open side of the science. His  particular interests are biodiversity informatics, data management, marine life, invasive species, species distribution models and Open Science.<br>[<i class="fa fa-envelope"></i> contact](maito:m.coppremanne@biodiversity.be)
       categories: [Open Data Expert]
