--- a/_data/fr/node.yml
+++ b/_data/fr/node.yml
@@ -48,9 +48,9 @@ staff:
         Dimitri est un biologiste intéressé par l'informatique de la biodiversité, il anime le réseau et participe activement à la mobilisation et à la publication des données en Flandre. Dimitri s'intéresse particulièrement à la standardisation des données, au Darwin Core, aux espèces envahissantes, à la paléontologie, à la biodiversité terrestre et d'eau douce. Il prône la science ouverte dans le cycle de recherche et encourage une utilisation pratique des données ouvertes. Il adore discuter avec les scientifiques et les aide à publier leurs données. Son objectif est de placer la Flandre sur la carte mondiale de la biodiversité. Dimitri travaille à l'Institut de Recherche sur la Nature et la Forêt.<br>[<i class="fa fa-envelope"></i> contact](maito:d.brosens@biodiversity.be)
       categories: [Expert en données]
       background: /assets/images/staff/dimi.png
-    - title: Maxime Coppremanne # required
+    - title: Maxime Coupremanne # required
       description: | # required
-        Maxime est un biologiste impliqué dans la mobilisation des données de biodiversité en Wallonie. Basé au Département d'Etude du Milieu Naturel et Agricole (SPW-DEMNA), il prône l'utilisation de l'Open Data en Wallonie et souhaite en tout cas rejoindre le côté ouvert de la science. Ses intérêts particuliers sont l'informatique de la biodiversité, la gestion des données, la vie marine, les espèces envahissantes, les modèles de répartition des espèces et la science ouverte.<br>[<i class="fa fa-envelope"></i> contact](maito:m.coppremanne@biodiversity.be)
+        Maxime est un biologiste impliqué dans la mobilisation des données de biodiversité en Wallonie. Basé au Département d'Etude du Milieu Naturel et Agricole (SPW-DEMNA), il prône l'utilisation de l'Open Data en Wallonie et souhaite en tout cas rejoindre le côté ouvert de la science. Ses intérêts particuliers sont l'informatique de la biodiversité, la gestion des données, la vie marine, les espèces envahissantes, les modèles de répartition des espèces et la science ouverte.<br>[<i class="fa fa-envelope"></i> contact](maito:m.coupremanne@biodiversity.be)
       categories: [Expert en données]
       background: /assets/images/staff/max.png
     - title: Stijn Cooleman # required
