adding RiparIAS Intl conference as local news

--- a/_data/fr/images.yml
+++ b/_data/fr/images.yml
@@ -78,3 +78,11 @@ YB06:
   src: /assets/images/photos/YB06.jpg
   caption: |
     _Mushrooms_ from [Yvan Barbier](https://www.yvanbarbier.com) CC-BY-NC
+TH01:
+  src: /assets/images/photos/TH01.jpg
+  caption: |
+    RBINS Insects collections from Thierry Hubin CC-BY-NC
+IAS01:
+  src: /assets/images/photos/IAS01.png
+  caption: |
+    Anonymous
