--- a/_data/images.yml
+++ b/_data/images.yml
@@ -94,3 +94,7 @@ TH01:
   src: /assets/images/photos/TH01.jpg
   caption: |
     RBINS Insects collections from Thierry Hubin CC-BY-NC
+IAS01:
+  src: /assets/images/photos/IAS01.png
+  caption: |
+    Anonymous
