use hex code for colors

--- a/_config.yml
+++ b/_config.yml
@@ -55,7 +55,7 @@ algae:
   style:
     square: false # Should corners be square or rounded
     colors:
-      primary: blue # Primary color of your brand. Use HEX code. Used for buttons and links
+      primary: "#0000ff" # Primary color of your brand. Use HEX code. Used for buttons and links
     #      links: blue # What color should links have. Use a HEX code. DEfault is primary color.
     coloredHeadlineLinks: false # If a headline is a link, then use the link color. Default is true.
     navbar: # RELATED TO NAVIGATION BAR
