--- a/_data/fr/navigation.yml
+++ b/_data/fr/navigation.yml
@@ -17,8 +17,10 @@
 
 - text: Explorez
   menu:
-    - text: Occurrences
-      href: /fr/occurrence/search
+    - text: Données
+      href: /fr/occurrence/search?country=BE&view=MAP
+    - text: Données publiées
+      href: /fr/occurrence/search?publishingCountry=BE&view=MAP
     - text: Jeux de données
       href: /fr/dataset/search
     - text: Collections
