--- a/_data/images.yml
+++ b/_data/images.yml
@@ -104,5 +104,7 @@ MDT:
     MetabacodingDataToolkit
 BGNT:
   src: /assets/images/logos/BioGeoNET.png
+  height: 50px # ou une autre hauteur selon vos besoins
+  width: auto # ou une largeur spécifique si nécessaire
   caption: |
     [BioGeoNet](https://www.biogeonet.ulg.ac.be/) is a taxonomic and biogeographical database on all living beings, hosted by the BEC Laboratory [Biology, Evolution, Conservation](https://bec-lab.github.io/) at the University of Liège.
