--- a/_data/images.yml
+++ b/_data/images.yml
@@ -114,3 +114,8 @@ ECA25:
   src: /assets/images/photos/ECA25.jpg
   caption: |
     GBIF 2025 ECA meeting. Photo credits & rights @ Melianie Raymond (GBIF Secretariat)
+VPB:
+  src: /assets/images/photos/VLDP.jpg
+  caption: |
+    The Flemish Biodiversity Portal (Vlaams Biodiversiteitsportaal, VBP)
+
