--- a/_data/images.yml
+++ b/_data/images.yml
@@ -115,7 +115,7 @@ ECA25:
   caption: |
     GBIF 2025 ECA meeting. Photo credits & rights @ Melianie Raymond (GBIF Secretariat)
 VPB:
-  src: /assets/images/logos/VLDP.jpg
+  src: /assets/images/logos/VLDP.png
   caption: |
     The Flemish Biodiversity Portal (Vlaams Biodiversiteitsportaal, VBP)
 
