--- a/_data/fr/node.yml
+++ b/_data/fr/node.yml
@@ -61,6 +61,6 @@ staff:
   title: Anciens membres de l'équipe nodale
     - title: Andre Heughebaert # required
       description: | # required
-        Ingénieur logiciel senior et expert en informatique de la biodiversité, André a dirigé l'équipe informatique de la Plateforme. Il a coordonné la gestion des données, les sites Web et les services Web. André a été notre représentant auprès du Global Biodiversity Information Facility (GBIF) et a participé à la prise de décision au niveau mondial. Il s'intéressait particulièrement aux normes d'échange de données sur la biodiversité, aux outils de visualisation, de nettoyage et de publication des données.<br>
+        Ingénieur logiciel senior et expert en informatique de la biodiversité, André a dirigé l'équipe données et informatique de la Plateforme, assurant la coordination de la gestion des données, des sites et des services Web. André a géré et a fait évoluer le noeud GBIF belge depuis ses premiers stages, il a assuré la représentation belge et a offert une contribution exemplaire au réseau GBIF global, supportant activement les décisions stratégiques et les diverses activités.  Il s'intéresse particulièrement aux normes d'échange de données sur la biodiversité, aux outils de visualisation, de nettoyage et de publication des données.<br>
       categories: [Gestionnaire du Noeud à la retraite, Expert IT]
       background: /assets/images/staff/andre.png
