--- a/_data/fr/node.yml
+++ b/_data/fr/node.yml
@@ -40,22 +40,22 @@ staff:
   features:
     - title: Julien Cigar # required
       description: | # required
-        Informaticien, Julien est l'administrateur système de la Plateforme Belge pour la Biodiversité. Il s'intéresse particulièrement aux bases de données, à Python et au système d'exploitation FreeBSD.<br>[<i class="fa fa-envelope"></i> contact](maito:j.cigar@biodiversity.be)
+        Informaticien, Julien est l'administrateur système de la Plateforme Belge pour la Biodiversité. Il s'intéresse particulièrement aux bases de données, à Python et au système d'exploitation FreeBSD.<br>[<i class="fa fa-envelope"></i> contact](mailto:j.cigar@biodiversity.be)
       categories: [Administrateur de système, Expert IT]
       background: /assets/images/staff/julien.png
     - title: Dimitri Brosens # required
       description: | # required
-        Dimitri est un biologiste intéressé par l'informatique de la biodiversité, il anime le réseau et participe activement à la mobilisation et à la publication des données en Flandre. Dimitri s'intéresse particulièrement à la standardisation des données, au Darwin Core, aux espèces envahissantes, à la paléontologie, à la biodiversité terrestre et d'eau douce. Il prône la science ouverte dans le cycle de recherche et encourage une utilisation pratique des données ouvertes. Il adore discuter avec les scientifiques et les aide à publier leurs données. Son objectif est de placer la Flandre sur la carte mondiale de la biodiversité. Dimitri travaille à l'Institut de Recherche sur la Nature et la Forêt.<br>[<i class="fa fa-envelope"></i> contact](maito:d.brosens@biodiversity.be)
+        Dimitri est un biologiste intéressé par l'informatique de la biodiversité, il anime le réseau et participe activement à la mobilisation et à la publication des données en Flandre. Dimitri s'intéresse particulièrement à la standardisation des données, au Darwin Core, aux espèces envahissantes, à la paléontologie, à la biodiversité terrestre et d'eau douce. Il prône la science ouverte dans le cycle de recherche et encourage une utilisation pratique des données ouvertes. Il adore discuter avec les scientifiques et les aide à publier leurs données. Son objectif est de placer la Flandre sur la carte mondiale de la biodiversité. Dimitri travaille à l'Institut de Recherche sur la Nature et la Forêt.<br>[<i class="fa fa-envelope"></i> contact](mailto:d.brosens@biodiversity.be)
       categories: [Expert en données]
       background: /assets/images/staff/dimi.png
     - title: Maxime Coupremanne # required
       description: | # required
-        Maxime est un biologiste impliqué dans la mobilisation des données de biodiversité, particulièrement en Wallonie. Basé à l'Institut des Sciences Naturelles (IRSNB), il prône l'utilisation de l'Open Data et souhaite vous faire rejoindre le côté ouvert de la science. Ses intérêts particuliers sont l'informatique de la biodiversité, la gestion des données, la vie marine, les espèces envahissantes, les modèles de répartition des espèces et la science ouverte.<br>[<i class="fa fa-envelope"></i> contact](maito:m.coupremanne@biodiversity.be)
+        Maxime est un biologiste impliqué dans la mobilisation des données de biodiversité, particulièrement en Wallonie. Basé à l'Institut des Sciences Naturelles (IRSNB), il prône l'utilisation de l'Open Data et souhaite vous faire rejoindre le côté ouvert de la science. Ses intérêts particuliers sont l'informatique de la biodiversité, la gestion des données, la vie marine, les espèces envahissantes, les modèles de répartition des espèces et la science ouverte.<br>[<i class="fa fa-envelope"></i> contact](mailto:m.coupremanne@biodiversity.be)
       categories: [Expert en données, Gestionnaire du Noeud]
       background: /assets/images/staff/max.png
     - title: Stijn Cooleman # required
       description: | # required
-        Stijn est un biologiste doté de compétences interdisciplinaires en gestion de données. Il est impliqué dans les activités open data de la plateforme. En se concentrant sur les standards et la cartographie des données, il soutient la mobilisation des données de terrain et des connaissances sur l'histoire naturelle des collections. Il s'intéresse particulièrement à l'écologie aviaire, à la taxonomie, à la répartition des espèces et aux services écosystémiques.<br>[<i class="fa fa-envelope"></i> contact](maito:s.cooleman@biodiversity.be)
+        Stijn est un biologiste doté de compétences interdisciplinaires en gestion de données. Il est impliqué dans les activités open data de la plateforme. En se concentrant sur les standards et la cartographie des données, il soutient la mobilisation des données de terrain et des connaissances sur l'histoire naturelle des collections. Il s'intéresse particulièrement à l'écologie aviaire, à la taxonomie, à la répartition des espèces et aux services écosystémiques.<br>[<i class="fa fa-envelope"></i> contact](mailto:s.cooleman@biodiversity.be)
       categories: [Expert en données]
       background: /assets/images/staff/stijn.png
     - title: Andre Heughebaert # required
